--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <div class="hero__title">
                             <h1>Join the ultimate tech book club</h1>
                             <p>Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time.</p>
-                            <a href="option">
+                            <a href="#option">
                                 <h5>REVIEW MEMBERSHIP OPTIONS</h5>
                                 <img src="./image/icon-arrow-down.svg" alt="">
                             </a>
@@ -123,9 +123,9 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="option">
             <div class="container">
-                <div class="option" id="option">
+                <div class="option">
                     <h2 class="option__title">Membership options</h2>
                     <div class="option__wrap">
                         <div class="option__card">
